--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -35,6 +35,10 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
   google_fonts: ^2.3.1
+  provider: ^6.0.2
+  flutter_colorpicker: ^1.0.3
+  intl: ^0.17.0
+  uuid: ^3.0.6
 
 dev_dependencies:
   flutter_test:
@@ -62,6 +66,7 @@ flutter:
     - assets/
     - assets/food_pics/
     - assets/magazine_pics/
+    - assets/cookipidia_assets/
     - assets/sample_data/
     - assets/profile_pics/
 
