--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,8 @@ dependencies:
   webview_flutter: ^3.0.1
   url_launcher: ^6.0.20
   shared_preferences: ^2.0.13
+  image_picker: ^0.8.5
+  path_provider: ^2.0.9
 
 dev_dependencies:
   flutter_test:
