--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,7 +30,6 @@ dependencies:
   flutter:
     sdk: flutter
 
-
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.2
@@ -41,11 +40,40 @@ dependencies:
   uuid: ^3.0.6
   smooth_page_indicator: ^1.0.0+2
   webview_flutter: ^3.0.1
-  url_launcher: ^6.0.20
+  url_launcher: ^6.1.2
   shared_preferences: ^2.0.13
   image_picker: ^0.8.5
   path_provider: ^2.0.9
+  firebase_core: ^1.16.0
+  cloud_firestore: ^3.1.14
 
+  firebase_auth: ^3.3.17
+
+  chopper: ^4.0.5
+  logging: ^1.0.2
+  equatable: ^2.0.3
+
+  json_annotation: ^4.4.0
+
+  cached_network_image: ^3.1.0
+  flutter_slidable: ^0.6.0
+  flutter_svg: ^0.22.0
+
+  sqflite: ^2.0.2
+
+  synchronized: ^3.0.0+2
+  sqlbrite: ^2.2.0
+
+  moor_flutter: ^4.1.0
+
+  modal_progress_hud_nsn: ^0.1.0-nullsafety-1
+
+  build_runner: ^2.1.8
+  json_serializable: ^6.1.5
+  chopper_generator: ^4.0.5
+
+  moor_generator: ^4.6.0+1
+  
 dev_dependencies:
   flutter_test:
     sdk: flutter
@@ -75,6 +103,7 @@ flutter:
     - assets/cookipidia_assets/
     - assets/sample_data/
     - assets/profile_pics/
+    - assets/images/
 
   # An image asset can refer to one or more resolution-specific "variants", see
   # https://flutter.dev/assets-and-images/#resolution-aware.
